<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adades.scorekeeperapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/logo_res" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/blue"
                    android:textSize="@dimen/medium_text"
                    android:textColor="@color/blue"/>


            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/middleLineColor">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/red"
                    android:textSize="@dimen/medium_text"
                    android:textColor="@color/red"/>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/score_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/scorePlayer"
                    android:textSize="@dimen/large_text" />


            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/middleLineColor">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/score_red"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/scorePlayer"
                    android:textSize="@dimen/large_text" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/jab_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="jabBlue"
                    android:text="@string/jab" />


            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/middleLineColor">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/jab_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="jabRed"
                    android:text="@string/jab" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/hook_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="hookBlue"
                    android:text="@string/hook" />


            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/middleLineColor">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/hook_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="hookRed"
                    android:text="@string/hook" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/lower_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="lowerBlue"
                    android:text="@string/lowerRoundhouseKick" />


            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/middleLineColor">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/lowe_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="lowerRed"
                    android:text="@string/lowerRoundhouseKick" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/upper_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="upperBlue"
                    android:text="@string/upperRoundhouseKick" />


            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/middleLineColor">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/upper_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="upperRed"
                    android:text="@string/upperRoundhouseKick" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/projection_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="projectionBlue"
                    android:text="@string/projection" />


            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/middleLineColor">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/projection_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="projectionRed"
                    android:text="@string/projection" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/reset_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="resetBlue"
                    android:text="@string/reset" />


            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/middleLineColor">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/reset_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="resetRed"
                    android:text="@string/reset" />

            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>
